# playground

./: .editorconfig  .gitignore
c/: README.md  hello  hello.c  int.c  types.c  vec.c
elixir/case/: case-with-guard-clauses.exs
elixir/cond/: cond.exs
elixir/enum/: enum.exs
elixir/hello/: hello.exs
elixir/if-unless/: id.exs  unless.exs
elixir/pattern-matching/: case.exs  list.exs  name.exs
go/channel/: go.mod  main.go
go/context/: main.go
go/goauth/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum
go/hello/: hello.go
go/mock/: go.mod
go/struct-types/: person.go
go/tests/: go.mod
javascript/: callbacks.js  closure.js  object.js  recursion.js  scope.js
knexjs/: docker-compose.yml
knexjs/app/: index.js  package-lock.json  package.json
knexjs/database/: Dockerfile
lua/: arithmetic.lua  for.lua  if-else.lua  strings.lua  variables.lua  while.lua
lua/class-like-and-inheritance/: class-like-and-inheritance.lua
lua/coroutine/: main.lua
lua/functions/: clousure.lua  fib.lua  get_branch_name.lua  global-local.lua  matchs.lua  os.lua
lua/metatables-metamethods/: metatables-metamethods.lua
lua/modules/: name.lua  use-module.lua
lua/tables/: table.lua
lua/variables-flow-control/: arithmetic.lua  for.lua  if-else.lua  repeat.lua  strings.lua  variables.lua  while.lua
nodejs/recursive/: README.md  package-lock.json  (+2 more)
rust/clinews/: .env-example  Cargo.toml
rust/clinews/newsapi/: Cargo.toml
rust/clinews/newsapi/src/: lib.rs
rust/clinews/src/: main.rs
typescript/: interface.ts
(+180 files in other folders)
