[package]
name = "clinews"
version = "0.1.0"
edition = "2021"

description = "A simple cli news reader app"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0.133", features = ["derive"]}
serde_json = "1.0.74"
ureq = "2.4.0"
newsapi = { "path" = "./newsapi", features = ["async"]}
termimad = "0.20.0"
crossterm = "0.22.1"
tokio = { version = "1.15.0", features = ["full"]}
