[package]
name = "newsapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.4.0", features = ["json"]}
serde = { version = "1.0.133", features = ["derive"]}
serde_json = "1.0.74"
thiserror = "1.0.30"
url = "2.2.2"
dotenv = "0.15.0"
reqwest = { version = "0.11.9", features = ["json"], optional = true}

[features]
async = [
  "reqwest"
]

